- Vllain pickup messages no longer display globally.
- D'Sparil can now dismount after respawning.
- Tfear's Flawed now runs off Light ammo, rather than Heavy.
- Admiral Tfear now has a new weapon: The Predator Type 'Abandon', a rapid-fire grenade launcher that arcs low and bounces, allowing him to cover an area.

FROM V0.1 TO V0.11:
========================
- Korax has been added as Parias' villain.
- The villains are now resistant to everyone's VIs.
- D'Sparil can mount and dismount his Serpent at will.
- Villains should be more resistant to axing.
- Tfear and his Pfhor Troopers should now spew the proper-colored gibs.
- The Disciples of D'Sparil have been buffed and now have more HP and more damaging attacks.
- The Cyberdemon's rocket launch and explosion sounds are different from Doomguy's, for easier identification.
- The Cyberdemon now has his unique item.
- D'Sparil on foot getting hurt with the Zorchers or ice no longer regains him his health.
- Tfear's Flawed zoom-in is now much faster.
- Tfear's Guilt no longer raises instantly. Does raise and lower faster than before, though.
- D'Sparil's death sequence now properly shows his translation.
- Villains now respect samsara_jumpmod.
- Villain ammo and weapon pickups now flash the screen like normal pickups.
- The Cyberdemon's rockets have a less static-y launch sound and have twice the rolloff.
- Naraka weapon pickup buffs now persist from level to level.
- Naraka's health pickups now support infinite health.
- Tfear now can only have four Troopers out at one time.
- Implemented Naraka changelog.
- With the summon limit in place, Tfear's summon cooldown has been reduced from 30 to 21.
- D'Sparil's Serpent now moves faster, bites harder and faster, and heals itself slightly on every bite. On dismount, it also pauses momentarily, for people who like to dismount, summon, and remount.
- D'Sparil on his Serpent should now zorch properly.
- D'Sparil's zorch effect is no longer green.