@@ -56,7 +56,7 @@ actor KoraxPlayer : PlayerPawn
     DamageFactor "CorvusHellstaff", 0.8
     DamageFactor "WolfenFlamethrower", 0.8
     DamageFactor "Fire", 0.8 // Effects Corvus' Phoenix Rod as well as the TOZT and Firestorm. Damn.
-    DamageFactor "PhasingZorch", 0.8 // Not in yet!
+    DamageFactor "PhasingZorch", 0.8
     DamageFactor "WMCBeam", 0.45
     DamageFactor "WMCNade", 0.45
     Species "Villain"
@@ -167,9 +167,8 @@ actor KoraxPlayer : PlayerPawn
     }
 }
 
-ACTOR KilledKorax : Korax
+ACTOR KilledKorax
 {
-	Health 1
     Radius 1
     Height 1
     +NOCLIP
@@ -182,34 +181,103 @@ ACTOR KilledKorax : Korax
     States
     {
       Spawn:
-	  See:
-		KORX I 1 A_UnsetShootable//A_Die
-	  //Death:
+		KORX I 1 A_UnsetShootable
 		KORX I 4
 		KORX J 5 A_FaceTarget
 		KORX K 5 A_Scream
 		KORX LMNOP 5
 		KORX Q 20
-	Death:
         TNT1 A 0 Radius_Quake(4,16,0,16,0)
 		TNT1 A 0 A_Explode(384,384,0)
-		KORX R 5 A_KoraxBonePop
+		KORX R 1 A_SpawnItemEx("KoraxTracer",0,0,0,0,0,0,0,32)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,0,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,60,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,120,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,180,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,240,2,40)
+		KORX R 4 A_CustomMissile("KoraxPlayerSpirit",32,0,300,2,40)
 		KORX S 5 A_NoBlocking
 		KORX TU 5
 		KORX V -1
 		stop
-	Missile:
-		goto See
-	Pain:
-		goto See
-	Attack:
-		goto See
-	Command:
-		goto See
     }
 }
 
-ACTOR ZorchedKorax : Korax
+Actor KoraxTracer
+{
+	Radius 65
+	Height 115
+	+NODAMAGE
+	+SHOOTABLE
+	+NONSHOOTABLE
+	+NORADIUSDMG
+	+NOINTERACTION
+	+CLIENTSIDEONLY
+	+NOTARGET
+	-SOLID
+	-COUNTKILL
+	States
+	{
+	Spawn:
+		TNT1 A 0
+		TNT1 A 175 A_ChangeFlag("FRIENDLY",1)
+	Death:
+		TNT1 A 1 Thing_Remove(0)
+		Stop
+	}
+}
+
+Actor KoraxPlayerSpirit : KoraxSpirit
+{
+	Health 35
+	RenderStyle Add
+	+NODAMAGE
+	+SHOOTABLE
+	+NONSHOOTABLE
+	+NORADIUSDMG
+	+NOINTERACTION
+	+NOTARGET
+	+SEEKERMISSILE
+	+FORCERADIUSDMG
+	-COUNTKILL
+	Obituary "%k \crleft\c- %o \crone last surprise.\c-"
+	//SeeSound "SpiritActive"
+	States
+	{
+	Spawn:
+		SPIR A 0
+		SPIR A 0 A_VileTarget("KoraxTracer")
+		SPIR A 0 A_ClearTarget
+		SPIR A 0 A_SpawnItemEx("HolyPlayerTail",0,0,0,0,0,0,0,160)
+		SPIR A 0 A_SeekerMissile(10,20)
+		TNT1 A 0 A_Explode(48,128,0)
+		SPIR A 5 A_KSpiritRoam
+		SPIR B 0 A_SeekerMissile(10,20)
+		TNT1 A 0 A_Explode(48,128,0)
+		SPIR B 5 A_KSpiritRoam
+		Goto Spawn+4
+	}
+}
+
+Actor HolyPlayerTail : HolyTail
+{
+	//RenderStyle Add
+	+FRIENDLY
+	+NOINTERACTION
+	+NOTARGETSWITCH
+	States
+	{
+	Spawn:
+		SPIR C 1 A_CHolyTail
+		SPIR C 1 A_LookEx(2,0,1,0,360,"See")
+		Loop
+	See:
+		SPIR C 1 A_CHolyTail
+		Loop
+	}
+}
+
+ACTOR ZorchedKorax
 {
 	Health 1
     Radius 1
@@ -224,9 +292,7 @@ ACTOR ZorchedKorax : Korax
     States
     {
       Spawn:
-	  See:
-		KORX H 1 A_UnsetShootable//A_Die
-	  //Death:
+		KORX H 1 A_UnsetShootable
         TNT1 A 0 A_Stop
         TNT1 A 0 A_ChangeFlag("DONTGIB",1)
         TNT1 A 0 A_PlaySoundEx("chex/zorchhuge","soundslot5",0,0)
@@ -238,10 +304,15 @@ ACTOR ZorchedKorax : Korax
         KORX H 10 A_SetTranslucent(0.7,0)
         KORX H 10 A_SetTranslucent(0.6,0)
         KORX H 10 A_SetTranslucent(0.5,0)
-	Death:
         TNT1 A 0 Radius_Quake(4,16,0,16,0)
 		TNT1 A 0 A_Explode(384,384,0)
-        TNT1 A 0 A_KoraxBonePop
+		KORX R 0 A_SpawnItemEx("KoraxTracer",0,0,0,0,0,0,0,32)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,0,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,60,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,120,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,180,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,240,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,300,2,40)
         KORX H 10 A_SetTranslucent(0.4,0)
         KORX H 10 A_SetTranslucent(0.3,0)
         KORX H 10 A_SetTranslucent(0.2,0)
@@ -249,18 +320,10 @@ ACTOR ZorchedKorax : Korax
         ACLO E 1 A_SetTranslucent(1,0)
         ACLO E -1
         stop
-	Missile:
-		goto See
-	Pain:
-		goto See
-	Attack:
-		goto See
-	Command:
-		goto See
     }
 }
 
-ACTOR FrozenKorax : Korax
+ACTOR FrozenKorax
 {
     Radius 1
     Height 1
@@ -275,17 +338,20 @@ ACTOR FrozenKorax : Korax
     {
       Spawn:
 	  See:
-		KORX H 1 A_UnsetShootable//A_Die
-	  //Death:
+		KORX H 1 A_UnsetShootable
         TNT1 A 0 A_NoBlocking
         KORX Z 0 
         KORX Z 0 A_PlaySoundEx("freeze/korax","soundslot6",0,0)
-        KORX Z 0 //A_GenericFreezeDeath
         KORX Z 80 A_UnsetSolid
-	Death:
         TNT1 A 0 Radius_Quake(4,8,0,16,0)
 		TNT1 A 0 A_Explode(384,384,0)
-        TNT1 A 0 A_KoraxBonePop
+		KORX R 0 A_SpawnItemEx("KoraxTracer",0,0,0,0,0,0,0,32)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,0,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,60,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,120,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,180,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,240,2,40)
+		KORX R 0 A_CustomMissile("KoraxPlayerSpirit",32,0,300,2,40)
         KORX Z 60 A_UnsetSolid
         KORX Z 0 A_PlaySoundEx("freeze/break","soundslot6",0,0)
         KORX HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH 0 A_SpawnItemEx("IceChunk2",random(-1,1),random(-1,1),random(16,96),random(-2,2),random(-2,2),random(5,15))
@@ -293,40 +359,5 @@ ACTOR FrozenKorax : Korax
         KORX Z 1 //A_IceGuyDie
         ACLO A -1
         stop
-	Missile:
-		goto See
-	Pain:
-		goto See
-	Attack:
-		goto See
-	Command:
-		goto See
     }
-}
-
-ACTOR KoraxSpirit2 : KoraxSpirit replaces KoraxSpirit
-{
-  +NOCLIP
-  -ACTIVATEPCROSS
-  -ACTIVATEIMPACT
-  +CLIENTSIDEONLY
-  +BRIGHT
-  RenderStyle Add
-  Alpha 0.75
-  States
-  {
-  Spawn:
-    SPIR A 5 A_KSpiritRoam
-	TNT1 A 0 A_Jump(13,"Scream")
-  Spawn2:
-	SPIR B 5 A_KSpiritRoam
-	TNT1 A 0 A_Jump(13,"Scream2")
-    goto Spawn
-  Scream:
-	TNT1 A 0 A_PlaySoundEx("korax/spiritscream","voice",0,0)
-	goto Spawn2
-  Scream2:
-	TNT1 A 0 A_PlaySoundEx("korax/spiritscream","voice",0,0)
-	goto Spawn
-}
 }
