@@ -10,8 +10,10 @@
  ^-: The Staff of D'Sparil was drawn by Ichor and coded by Gothic, and taken off Realm667.
 - Korax, HeXen, and everything associated are copyright Raven Software.
  ^-: Translations by Repo Man.
+ ^-: Death sequence redone in DECORATE by Popsoap.
 - Admiral Tfear, Marathon, and everything associated are copyright Bungie.
- ^-: Shock Staff sprites by Forrest Cameranesi.
+ ^-: Shock Staff/Abandon sprites by Forrest Cameranesi.
+ ^-: Abandon firing sound by Marrub.
  ^-: Numerous sounds ripped by Hopper.
  ^-: Flawed zoom-in sequence by PillowBlaster.
  ^-: Duke Gib sequence for the Pfhor Troopers by PresidentPeople.
